fix border overlap

--- a/themes/jack-q-blog/source/css/main.less
+++ b/themes/jack-q-blog/source/css/main.less
@@ -692,6 +692,7 @@ header.jq-nav-header{
       text-align: center;
       .archive-list-item{
         border:dotted 1px #2be;
+        margin: 0 -1px -1px 0;
         transition: all ease 400ms;
         &:hover{
           background-color: rgba(20,20,20,0.2);
